# doc-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  Plan_M0.md  STARTUP.md  docker-compose.yml  pyproject.toml  start.bat  stop.bat  test_cache_approval.py
.claude/: settings.local.json
.claude/plans/: m3-rag-cache.plan.md
app/: __init__.py  config.py  exceptions.py  logging_config.py
app/agent/: _keys.py  consumer.py  graph.py  nodes.py  schemas.py  state.py
app/cache/: quality.py  query_rewriter.py  review.py  schemas.py  service.py  store.py
app/clients/: base.py  llm.py  milvus.py  mq.py  mysql.py  postgresql.py  redis.py
app/consistency/: consumer.py  invalidator.py  service.py
app/core/: config.py  exceptions.py  logging_config.py  rate_limit.py
app/knowledge_base/: chunker.py  cleaner.py  dedup.py  embedder.py  parser.py  service.py  store.py  update.py
app/memory/: recent.py  schemas.py  service.py  static_knowledge.py  summary.py
app/middleware/: rate_limit.py  registry.py  request_id.py  security_headers.py
app/models/: chunk.py  retrieval.py
app/retrieval/: __init__.py  bm25.py  hybrid.py  reranker.py  router.py  rrf.py  vector.py
app/routers/: agent.py  cache.py  health.py  knowledge_base.py  memory.py
app/static/: app.js  index.html  style.css
docs/: API.md  CONTRIBUTING.md  ENV.md
migrations/: m1_schema.sql  m5_schema.sql  m5_v2_schema.sql
tests/: test_config.py  test_exceptions.py  test_health.py  test_lifespan.py  test_milvus_client.py  test_models.py  test_mq_client.py  test_mysql_client.py  test_postgresql_client.py  test_redis_client.py  test_static.py  test_tooling.py
tests/agent/: test_consumer.py  test_graph.py  test_nodes.py
tests/browser/: conftest.py  test_delete_document_ui.py
tests/cache/: test_quality.py  test_query_rewriter.py  test_review.py  test_schemas.py  test_service.py  test_store.py
tests/consistency/: test_consumer.py  test_invalidator.py  test_service.py
tests/e2e/: conftest.py  test_agent.py  test_agent_lifecycle.py  test_api_pipeline.py  test_cache_admin_journey.py  test_cache_pipeline.py  test_consistency_pipeline.py  test_frontend_pipeline.py  test_kb_pipeline.py  (+4 more)
(+21 files in other folders)
