[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "pymilvus>=2.4.0",
    "python-json-logger>=2.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0",
    "openai>=1.0",
    "langgraph>=0.2",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require running infrastructure",
    "browser: marks Playwright browser E2E tests",
]

[tool.playwright]
browser = "chromium"

[tool.hatch.build.targets.wheel]
packages = ["app"]
